--- a/client/visualization-dashboard-client/package.json
+++ b/client/visualization-dashboard-client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.10.3",
     "react-chartjs-2": "^2.11.2",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
